--- a/.gitignore
+++ b/.gitignore
@@ -29,14 +29,33 @@ ENV/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Project specific
+# Large data files (GitHub has 100MB limit)
+*.geojson
+*.shp
+*.shx
+*.dbf
+*.prj
+*.cpg
+*.html
+
+# Project specific data directories
 data/raw/*
 !data/raw/.gitkeep
+!data/raw/README.md
 data/processed/*
 !data/processed/.gitkeep
+!data/processed/README.md
 output/*
 !output/.gitkeep
+!output/README.md
 
 # OS specific
 .DS_Store
 Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
